@@ -2,8 +2,6 @@ from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
 from eea.pdf.themes.section.folder import Body as PDFBody
 from eea.pdf.themes.page.body import Body as PDFPageBody
 from eea.pdf.themes.manual.manual import get_node_html
-from plone.app.contenttypes.content import Image
-from plone import api
 
 
 class FolderBody(PDFBody):
@@ -36,14 +34,3 @@ class PageBody(PDFPageBody):
     """ Custom PDF body
     """
     template = ViewPageTemplateFile('pt/page.body.pt')
-
-
-class ImageOverride(Image):
-    def html2text(self, html):
-        if not isinstance(html, basestring):
-            return u""
-        portal_transforms = api.portal.get_tool(name='portal_transforms')
-        data = portal_transforms.convertTo('text/plain',
-                                           html, mimetype='text/html')
-        text = data.getData()
-        return text.strip()
