@@ -9,18 +9,18 @@
 
 <metal:content-description fill-slot="content-description">
   <div class="documentDescription" i18n:translate="" 
-          tal:content="python: context.html2text(context.description.output)"
-          tal:condition="python: context.description.output">
+          tal:content="python: context.html2text(context.long_description.output)"
+          tal:condition="python: context.long_description.output">
   </div>
 </metal:content-description>
 
 <metal:content-core fill-slot="content-core">
-<metal:block define-macro="content-core" tal:define="size context/image/getSize">
+<metal:block define-macro="content-core" tal:define="size context/rich_image/getSize">
   <figure class="image-product">
     <a class="discreet"
-        tal:attributes="href string:${context/@@plone_context_state/object_url}/image_view_fullscreen"
+        tal:attributes="href string:${context/@@plone_context_state/object_url}/richimage_view_fullscreen"
         tal:define="scale context/@@images;
-                    img_tag python:scale.scale('image', scale='large').tag()"
+                    img_tag python:scale.scale('rich_image', scale='large').tag()"
         tal:on-error="string: Image cannot be displayed">
     <img tal:replace="structure img_tag" />
     <figcaption class="discreet">
