@@ -1,0 +1,53 @@
+<?xml version="1.0"?>
+<contentrules>
+ <rule name="rule-1" title="Send notification when item is modified"
+    cascading="False" description="" enabled="True"
+    event="zope.lifecycleevent.interfaces.IObjectModifiedEvent"
+    stop-after="False">
+  <conditions>
+   <condition type="plone.conditions.PortalType">
+    <property name="check_types">
+     <element>RichImage</element>
+    </property>
+   </condition>
+  </conditions>
+  <actions>
+   <action type="plone.actions.Mail">
+    <property name="source"/>
+    <property name="message">A database item has been edited
+     
+     Link: ${url}</property>
+    <property name="groups"/>
+    <property name="members"/>
+    <property name="subject">A database item has been edited</property>
+   </action>
+  </actions>
+ </rule>
+ <rule name="rule-2" title="Send notification when item is created"
+    cascading="False" description="" enabled="True"
+    event="zope.lifecycleevent.interfaces.IObjectAddedEvent"
+    stop-after="False">
+  <conditions>
+   <condition type="plone.conditions.PortalType">
+    <property name="check_types">
+     <element>RichImage</element>
+    </property>
+   </condition>
+  </conditions>
+  <actions>
+   <action type="plone.actions.Mail">
+    <property name="source"/>
+    <property name="message">A database item has been created.
+     
+     URL: ${url}</property>
+    <property name="groups">
+     <element>Administrators</element>
+    </property>
+    <property name="members"/>
+    <property name="subject">A database item has been created</property>
+   </action>
+  </actions>
+ </rule>
+ <assignment name="rule-1" bubbles="True" enabled="True" location=""/>
+ <assignment name="rule-2" bubbles="True" enabled="True" location=""/>
+</contentrules>
