@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<repositorytool>
+    <policymap>
+        <type name="RichImage">
+            <policy name="at_edit_autoversion"/>
+            <policy name="version_on_revert"/>
+        </type>
+    </policymap>
+</repositorytool>
