@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<object name="portal_types" meta_type="Plone Types Tool">
+    <object name="RichImage" meta_type="Dexterity FTI" />
+</object>
