@@ -6,7 +6,6 @@
     xmlns:i18n="http://xml.zope.org/namespaces/i18n">
 
     <!-- Changed schema file -->
-    <property name="klass">wise.content.browser.overrides.ImageOverride</property>
-    <property name="model_file">wise.content.schema:image.xml</property>
-
+    <property name="klass">plone.app.contenttypes.content.Image</property>
+    <property name="model_file">plone.app.contenttypes.schema:image.xml</property>
 </object>
