@@ -1,0 +1,95 @@
+<?xml version="1.0"?>
+<object
+    i18n:domain="plone"
+    meta_type="Dexterity FTI"
+    name="RichImage"
+    xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+
+  <!-- Basic properties -->
+  <property
+      i18n:translate=""
+      name="title">RichImage</property>
+  <property
+      i18n:translate=""
+      name="description">Images can be referenced in pages or displayed in an album.</property>
+
+  <property name="allow_discussion">False</property>
+  <property name="factory">RichImage</property>
+  <property name="icon_expr"></property>
+  <property name="link_target"></property>
+
+  <!-- Hierarchy control -->
+  <property name="allowed_content_types"/>
+  <property name="filter_content_types">True</property>
+  <property name="global_allow">True</property>
+
+  <!-- Schema, class and security -->
+  <property name="add_permission">plone.app.contenttypes.addImage</property>
+  <property name="klass">wise.content.contenttypes.RichImage</property>
+  <property name="model_file"></property>
+  <property name="model_file"></property>
+  <property name="model_source"></property>
+  <property name="schema">wise.content.contenttypes.IRichImage</property>
+
+  <!-- Enabled behaviors -->
+  <property name="behaviors" purge="false">
+    <element value="plone.app.dexterity.behaviors.metadata.ICategorization"/>
+    <element value="plone.app.dexterity.behaviors.metadata.IPublication"/>
+    <element value="plone.app.dexterity.behaviors.metadata.IOwnership"/>
+    <element value="plone.app.dexterity.behaviors.discussion.IAllowDiscussion"/>
+    <element value="plone.app.dexterity.behaviors.id.IShortName"/>
+    <element value="plone.app.dexterity.behaviors.filename.INameFromFileName"/>
+    <element value="plone.app.dexterity.behaviors.exclfromnav.IExcludeFromNavigation"/>
+    <element value="plone.app.relationfield.behavior.IRelatedItems"/>
+    <!-- <element value="collective.dexteritytextindexer.behavior.IDexterityTextIndexer" /> -->
+  </property>
+
+  <!-- View information -->
+  <property name="default_view">view</property>
+  <property name="default_view_fallback">False</property>
+  <property name="immediate_view">view</property>
+  <property name="view_methods">
+    <element value="view"/>
+  </property>
+
+  <!-- Method aliases -->
+  <alias
+      from="(Default)"
+      to="@@display-file"
+  />
+  <alias
+      from="edit"
+      to="@@edit"
+  />
+  <alias
+      from="sharing"
+      to="@@sharing"
+  />
+  <alias
+      from="view"
+      to="(selected layout)"
+  />
+
+  <!-- Actions -->
+  <action
+      action_id="view"
+      category="object"
+      condition_expr=""
+      i18n:attributes="title"
+      title="View"
+      url_expr="string:${object_url}/view"
+      visible="True">
+    <permission value="View"/>
+  </action>
+  <action
+      action_id="edit"
+      category="object"
+      condition_expr=""
+      i18n:attributes="title"
+      title="Edit"
+      url_expr="string:${object_url}/edit"
+      visible="True">
+    <permission value="Modify portal content"/>
+  </action>
+
+</object>
