@@ -25,3 +25,14 @@ def upgrade_to_4(context):
     context.runImportStepFromProfile(default_profile, 'typeinfo')
 
     logger.info("Upgrade finished.")
+
+
+def upgrade_to_5(context):
+    logger.info("Upgrading to 5")
+
+    # need to reimport wise.content, it has updated type settings
+    context.runImportStepFromProfile(default_profile, 'typeinfo')
+    context.runImportStepFromProfile(default_profile, 'repositorytool')
+    context.runImportStepFromProfile(default_profile, 'contentrules')
+
+    logger.info("Upgrade finished.")
