@@ -36,4 +36,13 @@
         handler=".upgrades.upgrade_to_4"
         profile="wise.content:default" />
 
+    <!-- v5 upgrade -->
+    <genericsetup:upgradeStep
+        title="Upgrade wise.content to v5"
+        description=""
+        source="4"
+        destination="5"
+        handler=".upgrades.upgrade_to_5"
+        profile="wise.content:default" />
+
 </configure>
